--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/gradient"
-    tools:context=".Server.Login">
+    tools:context=".Server.LoginActivity">
 
     <EditText
         android:id="@+id/usernameEdit"
