--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -395,8 +395,6 @@
         android:id="@+id/cardTable2"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginEnd="0dp"
-        android:layout_marginRight="0dp"
         android:padding="1dp"
         android:paddingLeft="0dp"
         android:paddingTop="0dp"
@@ -611,7 +609,6 @@
             android:id="@+id/playerName2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
             android:layout_marginTop="2dp"
             android:text="playerName2"
             app:layout_constraintStart_toStartOf="parent"
@@ -621,7 +618,6 @@
             android:id="@+id/textView21"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
             android:layout_marginTop="4dp"
             android:text="Points in round:"
             app:layout_constraintStart_toStartOf="parent"
@@ -631,7 +627,6 @@
             android:id="@+id/textView22"
             android:layout_width="wrap_content"
             android:layout_height="22dp"
-            android:layout_marginStart="8dp"
             android:layout_marginTop="4dp"
             android:text="Points:"
             app:layout_constraintStart_toStartOf="parent"
@@ -701,6 +696,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:hint="Write a message"
+
             android:padding="1dp"
             android:paddingLeft="0dp"
             android:paddingTop="0dp"
@@ -726,7 +722,9 @@
             android:id="@+id/chatView"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:text="CHAT"
+            android:text=""
+            android:gravity="bottom"
+            android:scrollbars = "vertical"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/chatEdit"
