--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -20,10 +20,10 @@
         android:layout_marginBottom="103dp"
         android:background="#11000000"
         android:drawableLeft="@drawable/ic_action_user"
+        android:editable="true"
         android:ems="10"
         android:hint="Username"
         android:inputType="textPersonName"
-        android:text="nygus"
         android:textSize="16dp" />
 
     <EditText
@@ -38,10 +38,10 @@
         android:layout_marginBottom="37dp"
         android:background="#11000000"
         android:drawableLeft="@drawable/ic_action_pass"
+        android:editable="true"
         android:ems="10"
         android:hint="Password"
-        android:inputType="textPassword"
-        android:text="qweqaz" />
+        android:inputType="none|textPassword" />
 
     <android.support.v7.widget.CardView
         android:layout_width="300dp"
@@ -94,4 +94,17 @@
 
 
     </LinearLayout>
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="131dp"
+        android:layout_marginLeft="131dp"
+        android:layout_marginTop="70dp"
+        app:srcCompat="@drawable/logo" />
+
 </RelativeLayout>
