--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -35,8 +35,8 @@
         android:layout_alignParentRight="true"
         android:layout_marginStart="12dp"
         android:layout_marginLeft="12dp"
-        android:layout_marginEnd="66dp"
-        android:layout_marginRight="66dp"
+        android:layout_marginEnd="67dp"
+        android:layout_marginRight="67dp"
         android:layout_marginBottom="24dp"
         android:background="#11000000"
         android:drawableLeft="@drawable/ic_action_pass"
@@ -52,11 +52,11 @@
 
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_marginStart="4dp"
-        android:layout_marginLeft="4dp"
-        android:layout_marginEnd="70dp"
-        android:layout_marginRight="70dp"
-        android:layout_marginBottom="25dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginEnd="67dp"
+        android:layout_marginRight="67dp"
+        android:layout_marginBottom="24dp"
         android:background="#11000000"
         android:drawableLeft="@drawable/ic_action_pass"
         android:ems="10"
@@ -115,6 +115,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/linearLayout"
-        android:layout_toEndOf="@+id/linearLayout"
-        android:text="Back" />
+        android:text="Back"
+        android:layout_toRightOf="@+id/linearLayout" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/usernameREdit"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="201dp"
+        android:layout_marginBottom="22dp"
+        android:text="Create new account"
+        android:textSize="18sp" />
 </RelativeLayout>
